--- a/demo.html
+++ b/demo.html
@@ -187,7 +187,7 @@
 		</div>
 
 		<!-- Load the widget -->
-		<script src="dist/auth-widget.js"></script>
+		<script src="https://cdn.jsdelivr.net/gh/alpezed/auth-widget@main/lib/auth-widget.js"></script>
 
 		<script>
 			// Configure the widget with callbacks
