Update script references in demo.html to use the new auth-widget URL.

--- a/demo.html
+++ b/demo.html
@@ -164,7 +164,7 @@
 			<div class="code-example">
 				<h3>Usage Example</h3>
 				<pre><code><span class="comment">// 1. Include the script</span>
-&lt;script src="<span class="string">dist/auth-widget.js</span>"&gt;&lt;/script&gt;
+&lt;script src="<span class="string">https://auth-widget.pages.dev/lib/auth-widget.js</span>"&gt;&lt;/script&gt;
 
 <span class="comment">// 2. Configure callbacks (optional)</span>
 <span class="keyword">window</span>.AuthModalWidget.<span class="function">configure</span>({
@@ -187,7 +187,7 @@
 		</div>
 
 		<!-- Load the widget -->
-		<script src="https://cdn.jsdelivr.net/gh/alpezed/auth-widget@main/lib/auth-widget.js"></script>
+		<script src="https://auth-widget.pages.dev/lib/auth-widget.js"></script>
 
 		<script>
 			// Configure the widget with callbacks
