Update dependencies, refactor authentication components, and implement routing with TanStack Router
- Added new dependencies: @hono/node-server, @tanstack/react-router, and @tanstack/react-router-devtools.
- Refactored authentication logic in AuthModal and AuthModalWidget components to utilize better-auth.
- Introduced routing with TanStack Router, creating HomePage and AboutPage components.
- Updated demo.html to configure the widget with a base URL for authentication.
- Removed the App component in favor of a router-based structure.

--- a/demo.html
+++ b/demo.html
@@ -190,8 +190,9 @@
 		<script src="https://auth-widget.pages.dev/lib/auth-widget.js"></script>
 
 		<script>
-			// Configure the widget with callbacks
+			// Configure the widget: set baseURL to your auth server (required when embedded on another origin)
 			window.AuthModalWidget.configure({
+				baseURL: 'https://auth-widget-0ni.pages.dev/',
 				onSignIn: function (data) {
 					console.log('Sign in attempt:', data);
 					alert('Sign in with: ' + data.email);
